# lgpd-sentinel-ai

./: .env.example  AUDIT_RESPONSE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  com.lgpdsentinel.plist  docker-compose.yml  pyproject.toml  requirements.txt  service-install.sh  start.sh  start_api.sh
.github/: FUNDING.yml
.github/workflows/: build-desktop.yml  ci.yml
desktop/: .gitignore  package-lock.json  package.json
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/resources/backend/src/: __init__.py  main.py
desktop/src-tauri/resources/backend/src/api/routes/: billing.py  mapping.py
desktop/src-tauri/resources/backend/src/core/: database.py  pdf_report.py
desktop/src-tauri/src/: lib.rs
desktop/src/components/: MatrixRain.tsx  Onboarding.tsx  SetupWizard.tsx  Sidebar.tsx
desktop/src/components/tabs/: AboutLGPD.tsx  DPIA.tsx  DSR.tsx  DataMapping.tsx  History.tsx
desktop/src/lib/: api.ts
frontend/: app.py  dashboard.html
src/: main.py
src/api/routes/: __init__.py  billing.py  dpia.py  dsr.py  healthcheck.py  history.py  mapping.py  stats.py  usage_report.py
src/core/: __init__.py  config.py  database.py  healthcheck.py  notifications.py  pdf_report.py  prompts.py  quota.py
src/models/: __init__.py  schemas.py
tests/: conftest.py  test_dpia.py  test_dsr.py  test_healthcheck.py  test_history.py  test_integration.py  test_mapping.py  test_notifications.py  test_stats.py
