[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "lgpd-sentinel-ai"
version = "0.1.0"
description = "Ferramenta open source para audits automatizados de conformidade LGPD com IA local"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
