[package]
name = "lgpd-sentinel-desktop"
version = "1.0.0"
description = "LGPD Sentinel AI — Desktop App"
authors = ["Leonardo Bergonzi"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
portpicker = "0.1"
which = "7"
dirs = "5"
